--- a/adaggs/build.gradle
+++ b/adaggs/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile('com.facebook.android:audience-network-sdk:4.23.0') {
         exclude group: 'com.google.android.gms'
     }
+    compile 'com.android.support:percent:26.1.0'
+    implementation 'com.android.support:cardview-v7:27.0.2'
 }
