--- a/adaggs/build.gradle
+++ b/adaggs/build.gradle
@@ -20,12 +20,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
-    compile('com.facebook.android:audience-network-sdk:4.23.0') {
-        exclude group: 'com.google.android.gms'
-    }
-    compile 'com.android.support:percent:26.1.0'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:percent:25.3.1'
+
+    implementation('com.facebook.android:audience-network-sdk:4.23.0') {exclude group: 'com.google.android.gms'}
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-tagmanager:11.8.0'
+    implementation 'com.google.android.gms:play-services-analytics:11.8.0'
 }
