--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     } else {
         implementation 'com.inner.adaggs:adaggs:1.0.0'
     }
+    implementation 'com.inner.basic:basic:+'
 }
