--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'F:\\workdir\\products\\privaterepo'
+        }
+        mavenLocal()
         google()
         jcenter()
     }
