--- a/adaggs/build.gradle
+++ b/adaggs/build.gradle
@@ -5,8 +5,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 100
+        versionName "1.0.0"
     }
 
     buildTypes {
@@ -41,7 +41,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository(url: uri('F:\\workdir\\products\\privaterepo'))
-            pom.version  = "1.0.0"
+            pom.version  = android.defaultConfig.versionName
             pom.artifactId = "adaggs"
             pom.groupId = "com.inner.adaggs"
             pom.name = "inner-adaggs"
