--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -5,12 +5,12 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
-        versionName "1.0.1"
+        versionName "1.0.2"
     }
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
