--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
-        versionName "1.0.8"
+        versionName "1.1.0"
     }
 
     buildTypes {
@@ -28,10 +28,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:25.2.0'
 
-    implementation('com.facebook.android:audience-network-sdk:4.23.0') {exclude group: 'com.google.android.gms'}
-    implementation 'com.google.android.gms:play-services-ads:11.6.2'
-    implementation 'com.google.android.gms:play-services-tagmanager:11.6.2'
-    implementation 'com.google.android.gms:play-services-analytics:11.6.2'
+    implementation('com.facebook.android:audience-network-sdk:4.28.1') {
+        exclude group: 'com.google.android.gms'
+    }
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.firebase:firebase-config:11.8.0'
 }
 
 // 发布aar
