--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 }
 
 configurations.all {
-    resolutionStrategy.force 'com.google.android.gms:play-services-base:11.8.0'
-    resolutionStrategy.force 'com.google.firebase:firebase-analytics:11.8.0'
-    resolutionStrategy.force 'com.android.support:support-v4:25.3.1'
+    resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.0'
+    resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.0'
+    //resolutionStrategy.force 'com.android.support:support-v4:25.3.1'
 }
