--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ def useProject = true;
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "homeworkout.loseweight.fitness.butt.abs"
+        applicationId "com.onechat.social.messager"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -47,4 +47,6 @@ dependencies {
         implementation 'com.inner.adsdk:adsdk:1.0.0'
     }
     implementation 'com.inner.basic:basic:1.0.3'
+    implementation 'com.android.support:appcompat-v7:25.2.0'
+    implementation 'com.android.support:cardview-v7:27.0.2'
 }
