--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -24,6 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:25.2.0'
