--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     }
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
     implementation 'com.google.firebase:firebase-config:15.0.0'
+    implementation 'com.wemob:wemob:2.3.6'
 }
 
 // 发布aar
