--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:1.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     if (useProject) {
         implementation project(":adsdk")
     } else {
