--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         google()
         jcenter()
         mavenLocal()
+        // maven {url "https://s3.amazonaws.com/moat-sdk-builds"}
     }
 }
 
