--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ def useProject = true;
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.inner.adsdk.demo"
+        applicationId "com.bubble.shooter.casual.game.booster"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -52,5 +52,4 @@ dependencies {
 configurations.all {
     resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.0'
     resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.0'
-    //resolutionStrategy.force 'com.android.support:support-v4:25.3.1'
 }
