1. 更新manifest for applovin

--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -25,10 +25,14 @@
         <!-- applovin -->
         <activity
             android:name="com.applovin.adview.AppLovinInterstitialActivity"
-            android:configChanges="orientation|screenSize" />
+            android:configChanges="orientation|screenSize"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance" />
         <activity
             android:name="com.applovin.adview.AppLovinConfirmationActivity"
-            android:configChanges="orientation|screenSize" />
+            android:configChanges="orientation|screenSize"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance" />
 
         <meta-data
             android:name="applovin.sdk.key"
