--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ def useProject = true;
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.flash.color.caller.screen"
+        applicationId "com.inner.adsdk.demo"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -42,6 +42,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:1.0.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.inner.basic:basic:+'
     if (useProject) {
         implementation project(":adsdk")
     } else {
