--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:1.0.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.inner.basic:basic:+'
+    implementation 'com.inner.bcsdk:bcsdk:+'
     if (useProject) {
         implementation project(":adsdk")
     } else {
