--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -6,6 +6,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         versionName "2.0.2"
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
