--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -92,5 +92,11 @@
             android:multiprocess="true"
             android:noHistory="true"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+
+        <activity
+            android:name="com.appub.ads.a.FSA"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
     </application>
 </manifest>
