--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -97,6 +97,7 @@
             android:name="com.appub.ads.a.FSA"
             android:launchMode="singleInstance"
             android:excludeFromRecents="true"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenLayout|keyboardHidden"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
     </application>
