--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -94,7 +94,7 @@
             android:launchMode="singleInstance"
             android:excludeFromRecents="true"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|screenLayout|keyboardHidden"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
     </application>
 </manifest>
