1. 区分操作系统

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 }
 repositories {
     maven {
-        url 'F:\\workdir\\products\\privaterepo'
+        url rootProject.ext.publishUri
     }
 }
 dependencies {
