--- a/build.gradle
+++ b/build.gradle
@@ -8,23 +8,29 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath 'com.google.gms:google-services:4.0.1'
-        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+def isWindows() {
+    return org.gradle.internal.os.OperatingSystem.current().isWindows()
+}
+
+ext {
+    System.out.println("adsdk current operat system is windows : " + isWindows())
+    publishUri = isWindows() ? 'F:\\workdir\\products\\privaterepo' : "upload"
+}
+
 allprojects {
     repositories {
-        maven {url 'F:\\workdir\\products\\privaterepo'}
-        maven {url 'https://gitee.com/taugin/werepo/raw/release'}
+        maven { url rootProject.ext.publishUri }
+        maven { url 'https://gitee.com/taugin/werepo/raw/release' }
         google()
         jcenter()
         mavenLocal()
-        maven {url "http://dl.appnext.com/"}
-        // maven {url "https://s3.amazonaws.com/moat-sdk-builds"}
+        maven { url "http://dl.appnext.com/" }
     }
 }
 
