--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -36,13 +36,19 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
     implementation 'com.google.firebase:firebase-config:15.0.0'
     implementation 'com.wemob:wemob:2.3.8'
-    implementation 'com.applovin:applovin-sdk:+'
+    implementation 'com.applovin:applovin-sdk:8.1.4'
 
-    implementation('com.mopub:mopub-sdk:5.0.0@aar') {
+    implementation('com.mopub:mopub-sdk:5.4.0@aar') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit'
+        exclude group: 'com.android.support'
+        exclude module: 'mopub-sdk-interstitial' // use below com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
     }
+    implementation 'com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
+    implementation('com.mopub.mediation:admob:15.0.0.0')
+    implementation('com.mopub.mediation:facebookaudiencenetwork:4.28.1.0')
+    implementation('com.mopub.mediation:applovin:8.1.4.0')
 
     implementation 'com.appnext.sdk:ads:2.+'
     implementation 'com.appnext.sdk:banners:2.+'
