--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     }
     implementation 'com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
     implementation('com.mopub.mediation:admob:15.0.1.0-webeye')
-    implementation('com.mopub.mediation:facebookaudiencenetwork:4.28.1.0')
+    implementation('com.mopub.mediation:facebookaudiencenetwork:4.28.1.0-webeye@aar')
     implementation('com.mopub.mediation:applovin:8.1.4.0')
 
     implementation 'com.appnext.sdk:ads:2.+'
