--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation('com.mopub.mediation:admob:15.0.1.0-webeye2')
     implementation('com.mopub.mediation:facebookaudiencenetwork:4.28.1.0-webeye@aar')
     implementation('com.mopub.mediation:applovin:8.1.4.0')
+    implementation('com.mopub.mediation:inmobi:1.0.0')
 
     implementation 'com.appnext.sdk:ads:2.+'
     implementation 'com.appnext.sdk:banners:2.+'
