--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -51,6 +51,12 @@ dependencies {
     implementation('com.mopub.mediation:applovin:8.1.4.0')
     implementation('com.mopub.mediation:inmobi:1.0.1')
 
+    //inmobi
+    implementation 'com.inmobi.monetization:inmobi-ads:7.2.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
     implementation 'com.appnext.sdk:ads:2.+'
     implementation 'com.appnext.sdk:banners:2.+'
     implementation 'com.appnext.sdk:native-ads2:2.+' // New Native Ads
