1. 去除1.1广播适配 2. 增加mavenCentral

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
 
 allprojects {
     repositories {
+        mavenCentral()
         maven { url rootProject.ext.publishUri }
         maven { url 'https://gitee.com/taugin/werepo/raw/release' }
         google()
