--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -35,7 +35,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:25.2.0'
-
     implementation('com.facebook.android:audience-network-sdk:4.28.2') {
         exclude group: 'com.google.android.gms'
     }
@@ -53,18 +52,17 @@ dependencies {
         exclude module: 'mopub-sdk-interstitial' // use below com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
     }
     implementation 'com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
-    implementation('com.mopub.mediation:admob:15.0.1.0-webeye2')
-    implementation('com.mopub.mediation:facebookaudiencenetwork:4.28.1.0-webeye@aar')
-    implementation('com.mopub.mediation:applovin:8.1.4.0')
-    implementation('com.mopub.mediation:inmobi:1.0.4')
-    implementation('com.mopub.mediation:inneractive:7.1.7.0-webeye')
+    implementation 'com.mopub.mediation:admob:15.0.1.0-webeye2'
+    implementation 'com.mopub.mediation:facebookaudiencenetwork:4.28.1.0-webeye@aar'
+    implementation 'com.mopub.mediation:applovin:8.1.4.0'
+    implementation 'com.mopub.mediation:inmobi:1.0.4'
+    implementation 'com.mopub.mediation:inneractive:7.1.7.0-webeye'
 
     //inmobi
     implementation 'com.inmobi.monetization:inmobi-ads:7.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-
     implementation 'com.appnext.sdk:ads:2.+'
     implementation 'com.appnext.sdk:banners:2.+'
     implementation 'com.appnext.sdk:native-ads2:2.+' // New Native Ads
@@ -76,6 +74,10 @@ dependencies {
     implementation 'com.inneractive:ia-video-kit:7.1.7'
     // required resources
     implementation 'com.google.code.gson:gson:2.8.1'
+
+    // Dsp
+    implementation 'com.dspmob.sdk:dspsdk:0.15'
+    implementation 'com.mopub.mediation:dspmob:0.13.1@aar'
 }
 
 // 发布aar
