1. 增加percent和mascount默认值 2. 自定义nt_layout 3. FSA回调代码优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Translucent">
             <intent-filter>
                 <action android:name="${applicationId}.action.AFPICKER" />
             </intent-filter>
