--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -63,9 +63,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.appnext.sdk:ads:2.+'
-    implementation 'com.appnext.sdk:banners:2.+'
-    implementation 'com.appnext.sdk:native-ads2:2.+' // New Native Ads
 
     // Inner-Active
     implementation 'com.inneractive:ia-mraid-kit:7.1.7'
@@ -78,6 +75,11 @@ dependencies {
     // Dsp
     implementation 'com.dspmob.sdk:dspsdk:0.18'
     implementation 'com.mopub.mediation:dspmob:0.18.0@aar'
+
+    // appnext
+    implementation 'com.appnext.sdk:ads:2.+'
+    implementation 'com.appnext.sdk:banners:2.+'
+    implementation 'com.appnext.sdk:native-ads2:2.+' // New Native Ads
 
     // DAP
     implementation 'com.duapps.ad:cw:1.2.1'
