--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,17 @@
                 <action android:name="${applicationId}.action.AFPICKER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LockScreenActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent">
+            <intent-filter>
+                <action android:name="${applicationId}.action.LSPICKER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="android.max_aspect"
