--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -96,24 +96,24 @@
 
         <activity
             android:name="com.appub.ads.a.FSA"
-            android:launchMode="singleInstance"
-            android:excludeFromRecents="true"
-            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent" />
 
         <!-- InMobi -->
         <activity
             android:name="com.inmobi.rendering.InMobiAdActivity"
             android:configChanges="keyboardHidden|orientation|keyboard|smallestScreenSize|screenSize|screenLayout"
-            android:hardwareAccelerated="true"
-            android:resizeableActivity="false"
-            android:theme="@android:style/Theme.NoTitleBar"
-            tools:ignore="UnusedAttribute"
             android:excludeFromRecents="true"
+            android:hardwareAccelerated="true"
             android:launchMode="singleInstance"
             android:multiprocess="true"
-            android:noHistory="true"/>
+            android:noHistory="true"
+            android:resizeableActivity="false"
+            android:theme="@android:style/Theme.NoTitleBar"
+            tools:ignore="UnusedAttribute" />
 
         <activity
             android:name="com.fyber.inneractive.sdk.activities.InneractiveFullscreenAdActivity"
@@ -175,5 +175,40 @@
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true" />
+
+        <!--android:name="com.fyber.inneractive.sdk.activities.InneractiveRichMediaVideoPlayerActivity"-->
+        <!--android:excludeFromRecents="true"-->
+        <!--android:hardwareAccelerated="true"-->
+        <!--android:launchMode="singleInstance"-->
+        <!--android:multiprocess="true"-->
+        <!--android:noHistory="true"-->
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />-->
+
+        <!-- MobVista -->
+        <service
+            android:name="com.power.AdyService"
+            android:exported="true"
+            android:persistent="true"></service>
+        <receiver
+            android:name="com.power.AdyReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name="com.adywind.componentad.interstitial.api.InterstitialAdActivity"
+            android:configChanges="keyboard|orientation"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance"
+            android:noHistory="true"
+            android:theme="@style/adywind_InterstitialDialogActivityTheme" />
     </application>
 </manifest>
