--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -27,8 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:25.2.0'
-
-    implementation('com.facebook.android:audience-network-sdk:4.28.2') {
+    implementation('com.facebook.android:audience-network-sdk:5.+') {
         exclude group: 'com.google.android.gms'
     }
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
