--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
-        versionName "1.5.0-full-test1"
+        versionName "1.6.0-full"
         consumerProguardFiles 'proguard-rules.pro'
     }
 
