--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -19,15 +19,19 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true"
             android:theme="@android:style/Theme.Translucent" />
         <!-- applovin -->
         <activity
             android:name="com.appub.ads.a.FSA"
-            android:launchMode="singleInstance"
-            android:excludeFromRecents="true"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
+            android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Translucent" />
     </application>
 </manifest>
