--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
-// apply plugin: 'com.adsdk.encrypt'
-
 
 def useProject = true;
 
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "win.money.game.luckyday"
+        applicationId "com.hauyu.adsdk.demo"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
@@ -26,7 +24,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
