1. 删除无用依赖

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.adsdk.encrypt'
+// apply plugin: 'com.adsdk.encrypt'
 
 
 def useProject = true;
